legacy/stable/tom/engine/parser/tomjava/TomIslandParser.java
// Generated from /Users/pem/github/tom/src/tom/engine/parser/tomjava/TomIslandParser.g4 by ANTLR 4.5.3
package tom.engine.parser.tomjava;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TomIslandParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MATCH=1, STRATEGY=2, EXTENDS=3, VISIT=4, INCLUDE=5, GOM=6, OP=7, OPARRAY=8, 
		OPLIST=9, TYPETERM=10, IS_FSYM=11, IS_SORT=12, MAKE=13, MAKE_EMPTY=14, 
		MAKE_APPEND=15, MAKE_INSERT=16, GET_SLOT=17, GET_DEFAULT=18, GET_ELEMENT=19, 
		GET_HEAD=20, GET_TAIL=21, GET_SIZE=22, IS_EMPTY=23, IMPLEMENT=24, EQUALS=25, 
		MATCH_SYMBOL=26, EQUAL=27, LBRACE=28, RBRACE=29, LPAREN=30, RPAREN=31, 
		LSQUAREBR=32, RSQUAREBR=33, ARROW=34, COMMA=35, COLON=36, STAR=37, UNDERSCORE=38, 
		ANTI=39, AT=40, METAQUOTE=41, GREATEROREQ=42, LOWEROREQ=43, GREATERTHAN=44, 
		LOWERTHAN=45, DOUBLEEQ=46, DIFFERENT=47, AND=48, OR=49, PIPE=50, QMARK=51, 
		DQMARK=52, SLASH=53, BACKSLASH=54, DOT=55, BQUOTE=56, ID=57, DMINUSID=58, 
		INTEGER=59, DOUBLE=60, LONG=61, STRING=62, CHAR=63, ACTION_ESCAPE=64, 
		ACTION_STRING_LITERAL=65, MLCOMMENT=66, SLCOMMENT=67, WS=68, NL=69, ANY=70;
	public static final int
		RULE_start = 0, RULE_island = 1, RULE_metaquote = 2, RULE_matchStatement = 3, 
		RULE_strategyStatement = 4, RULE_includeStatement = 5, RULE_gomStatement = 6, 
		RULE_gomOptions = 7, RULE_visit = 8, RULE_actionRule = 9, RULE_block = 10, 
		RULE_water = 11, RULE_slotList = 12, RULE_slot = 13, RULE_patternlist = 14, 
		RULE_constraint = 15, RULE_term = 16, RULE_bqterm = 17, RULE_pairSlotBqterm = 18, 
		RULE_bqcomposite = 19, RULE_composite = 20, RULE_pattern = 21, RULE_fsymbol = 22, 
		RULE_headSymbol = 23, RULE_constant = 24, RULE_explicitArgs = 25, RULE_implicitArgs = 26, 
		RULE_typeterm = 27, RULE_operator = 28, RULE_oplist = 29, RULE_oparray = 30, 
		RULE_implement = 31, RULE_equalsTerm = 32, RULE_isSort = 33, RULE_isFsym = 34, 
		RULE_make = 35, RULE_makeEmptyList = 36, RULE_makeEmptyArray = 37, RULE_makeAppendArray = 38, 
		RULE_makeInsertList = 39, RULE_getSlot = 40, RULE_getHead = 41, RULE_getTail = 42, 
		RULE_getElement = 43, RULE_isEmptyList = 44, RULE_getSize = 45, RULE_getDefault = 46;
	public static final String[] ruleNames = {
		"start", "island", "metaquote", "matchStatement", "strategyStatement", 
		"includeStatement", "gomStatement", "gomOptions", "visit", "actionRule", 
		"block", "water", "slotList", "slot", "patternlist", "constraint", "term", 
		"bqterm", "pairSlotBqterm", "bqcomposite", "composite", "pattern", "fsymbol", 
		"headSymbol", "constant", "explicitArgs", "implicitArgs", "typeterm", 
		"operator", "oplist", "oparray", "implement", "equalsTerm", "isSort", 
		"isFsym", "make", "makeEmptyList", "makeEmptyArray", "makeAppendArray", 
		"makeInsertList", "getSlot", "getHead", "getTail", "getElement", "isEmptyList", 
		"getSize", "getDefault"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'%match'", "'%strategy'", "'extends'", "'visit'", "'%include'", 
		"'%gom'", "'%op'", "'%oparray'", "'%oplist'", "'%typeterm'", "'is_fsym'", 
		"'is_sort'", "'make'", "'make_empty'", "'make_append'", "'make_insert'", 
		"'get_slot'", "'get_default'", "'get_element'", "'get_head'", "'get_tail'", 
		"'get_size'", "'is_empty'", "'implement'", "'equals'", "'<<'", "'='", 
		"'{'", "'}'", "'('", "')'", "'['", "']'", "'->'", "','", "':'", "'*'", 
		"'_'", "'!'", "'@'", null, "'>='", "'<='", "'>'", "'<'", "'=='", "'!='", 
		"'&&'", "'||'", "'|'", "'?'", "'??'", "'/'", "'\\'", "'.'", "'`'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "MATCH", "STRATEGY", "EXTENDS", "VISIT", "INCLUDE", "GOM", "OP", 
		"OPARRAY", "OPLIST", "TYPETERM", "IS_FSYM", "IS_SORT", "MAKE", "MAKE_EMPTY", 
		"MAKE_APPEND", "MAKE_INSERT", "GET_SLOT", "GET_DEFAULT", "GET_ELEMENT", 
		"GET_HEAD", "GET_TAIL", "GET_SIZE", "IS_EMPTY", "IMPLEMENT", "EQUALS", 
		"MATCH_SYMBOL", "EQUAL", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "LSQUAREBR", 
		"RSQUAREBR", "ARROW", "COMMA", "COLON", "STAR", "UNDERSCORE", "ANTI", 
		"AT", "METAQUOTE", "GREATEROREQ", "LOWEROREQ", "GREATERTHAN", "LOWERTHAN", 
		"DOUBLEEQ", "DIFFERENT", "AND", "OR", "PIPE", "QMARK", "DQMARK", "SLASH", 
		"BACKSLASH", "DOT", "BQUOTE", "ID", "DMINUSID", "INTEGER", "DOUBLE", "LONG", 
		"STRING", "CHAR", "ACTION_ESCAPE", "ACTION_STRING_LITERAL", "MLCOMMENT", 
		"SLCOMMENT", "WS", "NL", "ANY"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TomIslandParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TomIslandParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public List<IslandContext> island() {
			return getRuleContexts(IslandContext.class);
		}
		public IslandContext island(int i) {
			return getRuleContext(IslandContext.class,i);
		}
		public List<WaterContext> water() {
			return getRuleContexts(WaterContext.class);
		}
		public WaterContext water(int i) {
			return getRuleContext(WaterContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					setState(96);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(94);
						island();
						}
						break;
					case 2:
						{
						setState(95);
						water();
						}
						break;
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IslandContext extends ParserRuleContext {
		public MatchStatementContext matchStatement() {
			return getRuleContext(MatchStatementContext.class,0);
		}
		public StrategyStatementContext strategyStatement() {
			return getRuleContext(StrategyStatementContext.class,0);
		}
		public IncludeStatementContext includeStatement() {
			return getRuleContext(IncludeStatementContext.class,0);
		}
		public GomStatementContext gomStatement() {
			return getRuleContext(GomStatementContext.class,0);
		}
		public TypetermContext typeterm() {
			return getRuleContext(TypetermContext.class,0);
		}
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public OplistContext oplist() {
			return getRuleContext(OplistContext.class,0);
		}
		public OparrayContext oparray() {
			return getRuleContext(OparrayContext.class,0);
		}
		public BqcompositeContext bqcomposite() {
			return getRuleContext(BqcompositeContext.class,0);
		}
		public MetaquoteContext metaquote() {
			return getRuleContext(MetaquoteContext.class,0);
		}
		public IslandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_island; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).enterIsland(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).exitIsland(this);
		}
	}

	public final IslandContext island() throws RecognitionException {
		IslandContext _localctx = new IslandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_island);
		try {
			setState(111);
			switch (_input.LA(1)) {
			case MATCH:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				matchStatement();
				}
				break;
			case STRATEGY:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				strategyStatement();
				}
				break;
			case INCLUDE:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				includeStatement();
				}
				break;
			case GOM:
				enterOuterAlt(_localctx, 4);
				{
				setState(104);
				gomStatement();
				}
				break;
			case TYPETERM:
				enterOuterAlt(_localctx, 5);
				{
				setState(105);
				typeterm();
				}
				break;
			case OP:
				enterOuterAlt(_localctx, 6);
				{
				setState(106);
				operator();
				}
				break;
			case OPLIST:
				enterOuterAlt(_localctx, 7);
				{
				setState(107);
				oplist();
				}
				break;
			case OPARRAY:
				enterOuterAlt(_localctx, 8);
				{
				setState(108);
				oparray();
				}
				break;
			case BQUOTE:
				enterOuterAlt(_localctx, 9);
				{
				setState(109);
				bqcomposite();
				}
				break;
			case METAQUOTE:
				enterOuterAlt(_localctx, 10);
				{
				setState(110);
				metaquote();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MetaquoteContext extends ParserRuleContext {
		public TerminalNode METAQUOTE() { return getToken(TomIslandParser.METAQUOTE, 0); }
		public MetaquoteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metaquote; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).enterMetaquote(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).exitMetaquote(this);
		}
	}

	public final MetaquoteContext metaquote() throws RecognitionException {
		MetaquoteContext _localctx = new MetaquoteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_metaquote);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(METAQUOTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchStatementContext extends ParserRuleContext {
		public TerminalNode MATCH() { return getToken(TomIslandParser.MATCH, 0); }
		public TerminalNode LBRACE() { return getToken(TomIslandParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(TomIslandParser.RBRACE, 0); }
		public TerminalNode LPAREN() { return getToken(TomIslandParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TomIslandParser.RPAREN, 0); }
		public List<ActionRuleContext> actionRule() {
			return getRuleContexts(ActionRuleContext.class);
		}
		public ActionRuleContext actionRule(int i) {
			return getRuleContext(ActionRuleContext.class,i);
		}
		public List<BqtermContext> bqterm() {
			return getRuleContexts(BqtermContext.class);
		}
		public BqtermContext bqterm(int i) {
			return getRuleContext(BqtermContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TomIslandParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TomIslandParser.COMMA, i);
		}
		public MatchStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).enterMatchStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).exitMatchStatement(this);
		}
	}

	public final MatchStatementContext matchStatement() throws RecognitionException {
		MatchStatementContext _localctx = new MatchStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_matchStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(MATCH);
			setState(128);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(116);
				match(LPAREN);
				setState(125);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UNDERSCORE) | (1L << BQUOTE) | (1L << ID) | (1L << INTEGER) | (1L << DOUBLE) | (1L << LONG) | (1L << STRING) | (1L << CHAR))) != 0)) {
					{
					setState(117);
					bqterm();
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(118);
						match(COMMA);
						setState(119);
						bqterm();
						}
						}
						setState(124);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(127);
				match(RPAREN);
				}
			}

			setState(130);
			match(LBRACE);
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << UNDERSCORE) | (1L << ANTI) | (1L << ID) | (1L << INTEGER) | (1L << DOUBLE) | (1L << LONG) | (1L << STRING) | (1L << CHAR))) != 0)) {
				{
				{
				setState(131);
				actionRule();
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(137);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrategyStatementContext extends ParserRuleContext {
		public TerminalNode STRATEGY() { return getToken(TomIslandParser.STRATEGY, 0); }
		public TerminalNode ID() { return getToken(TomIslandParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(TomIslandParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TomIslandParser.RPAREN, 0); }
		public TerminalNode EXTENDS() { return getToken(TomIslandParser.EXTENDS, 0); }
		public BqtermContext bqterm() {
			return getRuleContext(BqtermContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(TomIslandParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(TomIslandParser.RBRACE, 0); }
		public SlotListContext slotList() {
			return getRuleContext(SlotListContext.class,0);
		}
		public List<VisitContext> visit() {
			return getRuleContexts(VisitContext.class);
		}
		public VisitContext visit(int i) {
			return getRuleContext(VisitContext.class,i);
		}
		public StrategyStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strategyStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).enterStrategyStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).exitStrategyStatement(this);
		}
	}

	public final StrategyStatementContext strategyStatement() throws RecognitionException {
		StrategyStatementContext _localctx = new StrategyStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_strategyStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(STRATEGY);
			setState(140);
			match(ID);
			setState(141);
			match(LPAREN);
			setState(143);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(142);
				slotList();
				}
			}

			setState(145);
			match(RPAREN);
			setState(146);
			match(EXTENDS);
			setState(147);
			bqterm();
			setState(148);
			match(LBRACE);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VISIT) {
				{
				{
				setState(149);
				visit();
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeStatementContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(TomIslandParser.INCLUDE, 0); }
		public TerminalNode LBRACE() { return getToken(TomIslandParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(TomIslandParser.RBRACE, 0); }
		public List<TerminalNode> DOT() { return getTokens(TomIslandParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(TomIslandParser.DOT, i);
		}
		public List<TerminalNode> SLASH() { return getTokens(TomIslandParser.SLASH); }
		public TerminalNode SLASH(int i) {
			return getToken(TomIslandParser.SLASH, i);
		}
		public List<TerminalNode> BACKSLASH() { return getTokens(TomIslandParser.BACKSLASH); }
		public TerminalNode BACKSLASH(int i) {
			return getToken(TomIslandParser.BACKSLASH, i);
		}
		public List<TerminalNode> ID() { return getTokens(TomIslandParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TomIslandParser.ID, i);
		}
		public IncludeStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includeStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).enterIncludeStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).exitIncludeStatement(this);
		}
	}

	public final IncludeStatementContext includeStatement() throws RecognitionException {
		IncludeStatementContext _localctx = new IncludeStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_includeStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(INCLUDE);
			setState(158);
			match(LBRACE);
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SLASH) | (1L << BACKSLASH) | (1L << DOT) | (1L << ID))) != 0)) {
				{
				{
				setState(159);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SLASH) | (1L << BACKSLASH) | (1L << DOT) | (1L << ID))) != 0)) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(165);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GomStatementContext extends ParserRuleContext {
		public TerminalNode GOM() { return getToken(TomIslandParser.GOM, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public GomOptionsContext gomOptions() {
			return getRuleContext(GomOptionsContext.class,0);
		}
		public GomStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gomStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).enterGomStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).exitGomStatement(this);
		}
	}

	public final GomStatementContext gomStatement() throws RecognitionException {
		GomStatementContext _localctx = new GomStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_gomStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(GOM);
			setState(169);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(168);
				gomOptions();
				}
			}

			setState(171);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GomOptionsContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(TomIslandParser.LPAREN, 0); }
		public List<TerminalNode> DMINUSID() { return getTokens(TomIslandParser.DMINUSID); }
		public TerminalNode DMINUSID(int i) {
			return getToken(TomIslandParser.DMINUSID, i);
		}
		public TerminalNode RPAREN() { return getToken(TomIslandParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(TomIslandParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TomIslandParser.COMMA, i);
		}
		public GomOptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gomOptions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).enterGomOptions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TomIslandParserListener ) ((TomIslandParserListener)listener).exitGomOptions(this);
		}
	}

	public final GomOptionsContext gomOptions() throws RecognitionException {
		GomOptionsContext _localctx = new GomOptionsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_gomOptions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(LPAREN);
			setState(174);
			match(DMINUSID);
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(175);
				match(COMMA);
				setState(176);
				match(DMINUSID);
				}
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(182);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
